tests/baselines/reference/overloadModifiersMustAgree.errors.txt
overloadModifiersMustAgree.ts(2,12): error TS2385: Overload signatures must all be public, private or protected.
overloadModifiersMustAgree.ts(6,18): error TS2384: Overload signatures must all be ambient or non-ambient.
overloadModifiersMustAgree.ts(7,17): error TS2383: Overload signatures must all be exported or non-exported.
overloadModifiersMustAgree.ts(12,5): error TS2386: Overload signatures must all be optional or required.


==== overloadModifiersMustAgree.ts (4 errors) ====
    class baz {
        public foo();
               ~~~
!!! error TS2385: Overload signatures must all be public, private or protected.
        private foo(bar?: any) { } // error - access modifiers do not agree
    }
    
    declare function bar();
                     ~~~
!!! error TS2384: Overload signatures must all be ambient or non-ambient.
    export function bar(s: string);
                    ~~~
!!! error TS2383: Overload signatures must all be exported or non-exported.
    function bar(s?: string) { }
    
    interface I {
        foo? ();
        foo(s: string);
        ~~~
!!! error TS2386: Overload signatures must all be optional or required.
    }
    
    